update algo for trigger inversion pipeline

--- a/projects/trigger_inversion/src/trigger_inversion_targeted.ipynb
+++ b/projects/trigger_inversion/src/trigger_inversion_targeted.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eecs/jialin_song/anaconda3/envs/round_11/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import os\n",
@@ -327,6 +336,37 @@
    "source": [
     "METADATA = pd.read_csv(METADATA_FILEPATH)\n",
     "METADATA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2      id-00000002\n",
+       "9      id-00000009\n",
+       "10     id-00000010\n",
+       "14     id-00000014\n",
+       "20     id-00000020\n",
+       "          ...     \n",
+       "269    id-00000269\n",
+       "276    id-00000276\n",
+       "280    id-00000280\n",
+       "286    id-00000286\n",
+       "287    id-00000287\n",
+       "Name: model_name, Length: 96, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "METADATA[METADATA['model_architecture']==MODEL_ARCH[2]]['model_name']"
    ]
   },
   {
